--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>resume</title>
-	<link rel="stylesheet" href="../resume/css/reset.css">
-	<link rel="stylesheet" href="../resume/css/font-awesome.css">
-	<link rel="stylesheet" href="css/jquery.galpop.css">
-	<link rel="stylesheet" href="../resume/css/layout.css">
-	<script src="../resume/js/jquery.1.12.4.min.js"></script>
-	<script src="js/jquery.galpop.js"></script>
-	<script src="../resume/js/main.js"></script>
+	<title>个人履历</title>
+	<link rel="stylesheet" href="./css/reset.css">
+	<link rel="stylesheet" href="./css/font-awesome.css">
+	<link rel="stylesheet" href="./css/jquery.galpop.css">
+	<link rel="stylesheet" href="./css/layout.css">
+	<script src=".js/jquery.1.12.4.min.js"></script>
+	<script src="./js/jquery.galpop.js"></script>
+	<script src="./js/main.js"></script>
 </head>
 <body>
 	<div class="bg_img"></div>
