--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="./css/font-awesome.css">
 	<link rel="stylesheet" href="./css/jquery.galpop.css">
 	<link rel="stylesheet" href="./css/layout.css">
-	<script src=".js/jquery.1.12.4.min.js"></script>
+	<script src="./js/jquery.1.12.4.min.js"></script>
 	<script src="./js/jquery.galpop.js"></script>
 	<script src="./js/main.js"></script>
 </head>
