--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>个人履历</title>
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/font-awesome.css">
@@ -29,7 +30,7 @@
 				<div class="img">
 					<div class="img_bg person_log"></div>
 					<h2 class="name">雷华锋</h2>
-					<span class="subname">追逐前端</span>
+					<span class="subname">专注前端</span>
 				</div>
 				<div class="panel center">
 					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-birthday-cake"></i></span><span class="panelTd">1993/12/11</span></p>
@@ -70,7 +71,7 @@
 				</div>
 				<div class="panel">
 					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-calendar"></i></span><span class="panelTd">入职时间</span></p>
-					<p class="panelRow"><span class="panelTd text">2018.12 - 至今</span></p>
+					<p class="panelRow"><span class="panelTd text">2017.10 - 2019.3</span></p>
 					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-street-view"></i></span><span class="panelTd">任职部门</span></p>
 					<p class="panelRow"><span class="panelTd text">研发部</span></p>
 					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-id-badge"></i></span><span class="panelTd">职位名称</span></p>
@@ -106,6 +107,61 @@
 					</ul>
 				</div>
 			</div>
+			<div class="content_inner">
+				<div class="img">
+					<div class="img_bg ykzd_work_log"></div>
+					<h2 class="name">湖南云科智地网络科技有限公司</h2>
+					<span class="subname">提供专业化的企业信息化咨询服务和应用软件开发</span>
+				</div>
+				<div class="panel">
+					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-calendar"></i></span><span class="panelTd">入职时间</span></p>
+					<p class="panelRow"><span class="panelTd text">2019.03 - 至今</span></p>
+					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-street-view"></i></span><span class="panelTd">任职部门</span></p>
+					<p class="panelRow"><span class="panelTd text">技术部</span></p>
+					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-id-badge"></i></span><span class="panelTd">职位名称</span></p>
+					<p class="panelRow"><span class="panelTd text">web前端工程师</span></p>
+					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-wrench"></i></span><span class="panelTd">工作内容</span></p>
+					<p class="panelRow"><span class="panelTd text">负责公司项目开发中的前端事宜，主要内容如下：</br>1. 负责公司微信小程序的设计和开发；</br>2. 根据UI设计师提供的设计图，实现公司官网的开发与维护;</br>3. 负责公司的旧管理系统的维护工作,新功能的添加；</br>4. 根据项目需求开发项目前端页面，还原效果图,并和后端实现对接</br>5. 编写项目开发总结，把错误和解决方案写成文档</span></p>
+					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-cubes"></i></span><span class="panelTd">成果展示</span><span class="panelTd text right">前端实现+接口对接</span></p>
+					<ul>
+						<li href="img/work_img_lg/alp.png" class="galpop" data-galpop-group="gallery">
+							<img class="img_size" src ="img/work_img_sm/alp_sm.png" alt ="alp_sm"/>
+						</li>
+
+						<li href="img/work_img_lg/npl_diytable.png" class="galpop p-2" data-galpop-group="gallery">
+							<img class="img_size" src ="img/work_img_sm/npl_diytable_sm.png" alt ="npl_diytable_sm"/>
+						</li>
+
+						<li href="img/work_img_lg/npl_echart.png" class="galpop" data-galpop-group="gallery">
+							<img class="img_size" src ="img/work_img_sm/npl_echart_sm.png" alt ="npl_echart_sm"/>
+						</li>
+
+						<li href="img/work_img_lg/npl_panel.png" class="galpop" data-galpop-group="gallery">
+							<img class="img_size" src ="img/work_img_sm/npl_panel_sm.png" alt ="npl_panel_sm"/>
+							
+						</li>
+
+						<li href="img/work_img_lg/npl_table.png" class="galpop p-2" data-galpop-group="gallery">
+							<img class="img_size" src ="img/work_img_sm/npl_table_sm.png" alt ="npl_table_sm"/>
+						</li>
+						
+						<li href="img/work_img_lg/rskmon.png" class="galpop" data-galpop-group="gallery">
+							<img class="img_size" src ="img/work_img_sm/rskmon_sm.png" alt ="rskmon_sm"/>
+						</li>						
+					</ul>
+				</div>
+			</div>
+			<div class="content_inner">
+				<div class="img">
+					<div class="img_bg p_logo"></div>
+					<h2 class="name">个人作品</h2>
+					<span class="subname">静态服务器，所以都是些静态作品</span>
+				</div>
+				<div class="panel">
+					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-cubes"></i></span><span class="panelTd">作品链接</span></p>
+					<p class="panelRow"><a class="panelTd text" href="https://go_web.gitee.io/static-ykuccn/ykuccn/home_page.html">1，云科官网</a></p>
+				</div>
+			</div>
 		</div>
 
 		<div class="content skill_evaluate">
@@ -117,13 +173,16 @@
 				</div>
 				<div class="panel">
 					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-css3"></i></span><span class="panelTd">HTML + CSS</span></p>
-					<p class="panelRow"><span class="panelTd text">熟记各类常用标签及其属性；能巧用各类CSS选择器，以及样式属性；熟练DIV+CSS布局，能查找web前端的各种跨浏览器兼容问题。</span></p>
-					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-street-view"></i></span><span class="panelTd">JavaScript</span></p>
-					<p class="panelRow"><span class="panelTd text">致力于JQ技术，熟悉JQ相关类库，对各类常用JS开源脚本有较深积累及实战运用；</span></p>
-					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-id-badge"></i></span><span class="panelTd">前端框架</span></p>
-					<p class="panelRow"><span class="panelTd text">精通Bootstrap框架应用，对layUI、antDesign等常见前端框架有所了解，研习。</span></p>
-					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-id-badge"></i></span><span class="panelTd">UI设计</span></p>
-					<p class="panelRow"><span class="panelTd text">对各端设计规范有所了解与运用，重视交互设计专注用户体验，具有良好审美能力，能运用PS、AI等输出设计作品。</span></p>
+					<p class="panelRow"><span class="panelTd text">熟记各类常用标签及其属性；能巧用各类CSS选择器，以及样式属性；熟练DIV+CSS3布局，能查找web前端的各种跨浏览器兼容问题。</span></p>
+					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-street-view"></i></span><span class="panelTd">JavaScript框架</span></p>
+					<p class="panelRow"><span class="panelTd text">曾致力于JQ技术，熟悉JQ相关类库，对各类常用JS开源脚本有较深积累及实战运用；</span></p>
+					<p class="panelRow"><span class="panelTd text">熟悉vue生态的使用，了解react</span></p>
+					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-id-badge"></i></span><span class="panelTd">前端UI框架和组件库</span></p>
+					<p class="panelRow"><span class="panelTd text">熟练使用Bootstrap框架应用，对layUI、antDesign等常见前端UI框架有所了解，研习。熟练使用ele-ui的组件库，了解vue-beauty组件库。并且自行封装过组件</span></p>
+					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-wrench"></i></span><span class="panelTd">构建工具</span></p>
+					<p class="panelRow"><span class="panelTd text">熟悉webpack的使用；了解gulp</span></p>
+					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-wpexplorer"></i></span><span class="panelTd">UI设计</span></p>
+					<p class="panelRow"><span class="panelTd text">对各端设计规范有所了解与运用，重视交互设计专注用户体验，具有良好审美能力，能运用PS简单处理图片。</span></p>
 				</div>
 				<div class="line"></div>
 				<div class="img">
@@ -132,10 +191,7 @@
 					<span class="subname">心之所向，素履以往</span>
 				</div>
 				<div class="panel">
-						<p class="panelRow"><span class="panelTd text">自入行以来，有自学
-						的迷惘，更有持之以恒的坚持；从后端转至前端有失落也有惊喜。时至今日，幸甚至哉，从当初小白的姿态，慢慢进入了互联这个网行业。</span></p>
-						<p class="panelRow"><span class="panelTd text">从Java到HTML，从后端到前端，从举步维艰的应届小白到矜矜业业的IT从业者。一年的工作经历，洗刷了自己的陋习，造就了我今日的秉性：勇于面对自己的无知，对新事物的向往！对新的技术，新的知识，更是渴望</span></p>
-						<p class="panelRow"><span class="panelTd text">面对挑战欣然接受，面对不足坦然弥补，面对未知尤为渴望。</span></p>
+						<p class="panelRow"><span class="panelTd text">从举步维艰的小白到矜矜业业的从业者经历，洗刷了自己的陋习，勇于面对自己的无知，面对不足坦然弥补，面对未知尤为渴望;对新事物的向往！对新的技术，新的知识，更是渴望面对挑战欣然接受。</span></p>
 				</div>
 			</div>
 		</div>
