--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>个人履历</title>
+	<link rel="shortcut icon" href="./img/p_logo.png" type="png/jpg">
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/font-awesome.css">
 	<link rel="stylesheet" href="./css/jquery.galpop.css">
@@ -123,7 +124,7 @@
 					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-wrench"></i></span><span class="panelTd">工作内容</span></p>
 					<p class="panelRow"><span class="panelTd text">负责公司项目开发中的前端事宜，主要内容如下：</br>1. 负责公司微信小程序的设计和开发；</br>2. 根据UI设计师提供的设计图，实现公司官网的开发与维护;</br>3. 负责公司的旧管理系统的维护工作,新功能的添加；</br>4. 根据项目需求开发项目前端页面，还原效果图,并和后端实现对接</br>5. 编写项目开发总结，把错误和解决方案写成文档</span></p>
 					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-cubes"></i></span><span class="panelTd">成果展示</span><span class="panelTd text right">前端实现+接口对接</span></p>
-					<ul>
+					<!-- <ul>
 						<li href="img/work_img_lg/alp.png" class="galpop" data-galpop-group="gallery">
 							<img class="img_size" src ="img/work_img_sm/alp_sm.png" alt ="alp_sm"/>
 						</li>
@@ -148,7 +149,7 @@
 						<li href="img/work_img_lg/rskmon.png" class="galpop" data-galpop-group="gallery">
 							<img class="img_size" src ="img/work_img_sm/rskmon_sm.png" alt ="rskmon_sm"/>
 						</li>						
-					</ul>
+					</ul> -->
 				</div>
 			</div>
 			<div class="content_inner">
