--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
 					<p class="panelRow"><span class="panelTd text">初级前端工程师</span></p>
 					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-wrench"></i></span><span class="panelTd">工作内容</span></p>
 					<p class="panelRow"><span class="panelTd text">负责公司项目开发中的前端事宜，主要内容如下：</br>1、根据需求输出产品界面设计及交互设计。</br>2、输出适合后端人员介入的静态模板。</br>3、解决开发过程中遇到的前端相关的样式BUG及JS问题。</br>4、完成领导指派的其他设计任务或需求等。</span></p>
+					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-file-text"></i></span><span class="panelTd">项目介绍</span></p>
+					<p class="panelRow"><span class="panelTd text">日志平台</br>1、基于div+css页面布局；</br>2、使用正则表达式，注册功能的实现；</br>3、利用JavaScript(jQuery框架)实现效果（三级菜单实现）；</br>4、与后端人员协商好数据格式通过Ajax调用后台数据显示在页面；</br>5、与cookie的使用应用在登陆注册</span></p>
+					<p class="panelRow"><span class="panelTd text">表外不良系统</br>负责该项项目的重构。</br>1、使用hmtl5，CSS3，BootStrap等前端通用技术完成页面布局；</br>2、使用原生js和JQuery框架写出网页各种特效；</br>3、采用lazyload插件实现了图片的懒加载；</br>4、采用d3-master,并整合动画插件anime，完成渠道墙（带动效的流程图）</br>5、改造部分插件，将bootstrap表头固定，改造ztree的图片样式，将layui的时间插件能手动选择日期，时间等。<br>6、对各大主流浏览器进行兼容性处理，查询bug并进行修复；</span></p>
 					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-cubes"></i></span><span class="panelTd">成果展示</span><span class="panelTd text right">部分设计+前端实现</span></p>
 					<ul>
 						<li href="img/work_img_lg/alp.png" class="galpop" data-galpop-group="gallery">
@@ -123,6 +126,10 @@
 					<p class="panelRow"><span class="panelTd text">web前端工程师</span></p>
 					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-wrench"></i></span><span class="panelTd">工作内容</span></p>
 					<p class="panelRow"><span class="panelTd text">负责公司项目开发中的前端事宜，主要内容如下：</br>1. 负责公司微信小程序的设计和开发；</br>2. 根据UI设计师提供的设计图，实现公司官网的开发与维护;</br>3. 负责公司的旧管理系统的维护工作,新功能的添加；</br>4. 根据项目需求开发项目前端页面，还原效果图,并和后端实现对接</br>5. 编写项目开发总结，把错误和解决方案写成文档</span></p>
+					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-file-text"></i></span><span class="panelTd">项目介绍</span></p>
+					<p class="panelRow"><span class="panelTd text">网络安全运营管理平台</br>本项目采用vue+ vuex +vueRouter +vue-cli+axios+ element-ui+echarts+es6+sass;其中涉及菜单模块，Pagination分页模块，登录模块采用了JWT和本地存储技术；</br>1、运用element-ui,css3,html5进行页面布局，实现页面的动态效果；</br>2、运用vue.js开发，采用前后端分离开发模式； </br>3、运用vue.js中的指令和服务与后台接口对接，进行数据交互，进行页面渲染；</br>4、基于省份标识实现对菜单的控制；</br>5、使用element-ui组件，和部分改造组件，实现页面功能；</br>6、合理使用钩子函数，实现数据的监听、渲染页面、页面节点的实例化功能；</span></p>
+					<p class="panelRow"><span class="panelTd text">湖南电信态势感知</br>负责该项目搭建，主要是用echarts来展示数据态势，使用webpack手动架构建工具搭建项目，项目采用了vuex、vue-route、axios、element-ui、echarts以及ES6,7语法；</br>1、基于webpack手动来搭建项目工程，配置第三方插件；</br>2、使用vue框架，vue-router搭建项目路由，vuex来实现组件和数据的抽离；</br>3、使用axios封装token,并通过axios拦截器实现token的无缝刷新；</br>4、采用第三方插件实现vuex的持久化，将数据同步到本地；</br>5、采用rem和百分比结合的方式进行布局；<br>6、负责首页可视化图表的实现，及其大部分子页面的实现；</span></p>
+					<p class="panelRow"><span class="panelTd text">招财精销</br>本项目是一款微信小程序，其中涉及腾讯地图生成定位，选址模块，图片上传模块，上拉加载下拉刷新模块等。</br>1、运用WXML、WXSS进行页面的flex布局；</br>2、使用npm包请求，并对其封装token；与后台接口对接，进行数据交互，实现功能模块的判断；</br>3、使用JavaScript实现全部功能的逻辑处理；</br>4、运用@vant-weapp各种组件完成页面功能；</span></p>
 					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-cubes"></i></span><span class="panelTd">成果展示</span><span class="panelTd text right">前端实现+接口对接</span></p>
 					<!-- <ul>
 						<li href="img/work_img_lg/alp.png" class="galpop" data-galpop-group="gallery">
