--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
 					<p class="panelRow"><span class="panelTd p-head"><i class="fa fa-cubes"></i></span><span class="panelTd">作品链接</span></p>
 					<p class="panelRow"><a class="panelTd text" target="_blank" href="http://go_web.gitee.io/static-ykuccn/ykuccn/home_page.html">1，云科官网</a></p>
 					<p class="panelRow"><a class="panelTd text" target="_blank" href="https://go_web.gitee.io/static-channelwall">2，渠道墙</a></p>
+					<p class="panelRow"><a class="panelTd text" target="_blank" href="https://go_web.gitee.io/telecom-big-screen/first-big-screen/index.html">3，电信大屏(第一版)</a></p>
+					<p class="panelRow"><a class="panelTd text" target="_blank" href="https://go_web.gitee.io/telecom-big-screen/second-big-screen/demo.html">4，电信大屏(第二版)</a></p>
 				</div>
 			</div>
 		</div>
